# df-data-catalog

./: .gitignore  Makefile  README.md  pyproject.toml
cfg/: api_log.ini  config_dev.yaml  log_config.yaml
src/dc_app/: dc_app_api.py  dc_app_cli.py  dc_app_core.py
src/dc_app/discover/: query.py
src/dc_app/model/: models.py
